edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "google/protobuf/timestamp.proto";

// Detailed Speed data for Generation 2 VU downloads.
//
// See Appendix 7, Section 2.2.6.5 (TREP 24 Hex).
//
// Note: Gen2 detailed speed has no V2 variant - both Gen2 V1 and V2 use this format.
//
// ASN.1 Definition:
//
//     VuDetailedSpeedSecondGen ::= SEQUENCE {
//         vuDetailedSpeedBlockRecordArray VuDetailedSpeedBlockRecordArray,
//         signatureRecordArray SignatureRecordArray
//     }
message DetailedSpeedGen2 {
  // Represents speed data for a single minute.
  //
  // See Data Dictionary, Section 2.190, `VuDetailedSpeedBlock`.
  //
  // ASN.1 Definition:
  //
  //     VuDetailedSpeedBlock ::= SEQUENCE {
  //         speedBlockBeginDate TimeReal,
  //         speedsPerSecond SET SIZE(60) OF Speed
  //     }
  message DetailedSpeedBlock {
    // Timestamp for the beginning of the minute.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp begin_date = 1;

    // 60 speed values (in km/h), one for each second of the minute.
    //
    // See Data Dictionary, Section 2.155, `Speed`.
    repeated int32 speeds_kmh = 2;
  }

  // All detailed speed stored in the VU.
  //
  // See Data Dictionary, Section 2.191, `VuDetailedSpeedBlockRecordArray`.
  repeated DetailedSpeedBlock speed_blocks = 1;

  // Signature for Gen2 data (ECC, variable length in SignatureRecordArray).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  bytes signature = 2;

  // The raw, unparsed binary data of the complete Detailed Speed transfer value.
  // This field is preserved for data fidelity and lossless round-trips.
  // It includes all data structures and the embedded signature.
  bytes raw_data = 3;
}

